# aoc

./: .gitignore  Cargo.toml  README.md  day.sh
2024/: Cargo.toml
2024/src/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs
2025/: Cargo.toml
2025/src/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs
common/src/: dir.rs
src/: dir.rs  dist.rs  grid.rs  lib.rs  pt.rs  util.rs
src/day1/: mod.rs
src/day10/: mod.rs
src/day11/: mod.rs
src/day12/: mod.rs
src/day13/: mod.rs
src/day14/: mod.rs
src/day2/: mod.rs
src/day3/: mod.rs
src/day4/: mod.rs
src/day5/: mod.rs
src/day6/: mod.rs
src/day7/: mod.rs
src/day8/: mod.rs
src/day9/: mod.rs
template/: main.rs
util/: Cargo.toml
util/src/: clique.rs  dir.rs  dist.rs  graph.rs  grid.rs  lib.rs  parse.rs  pos.rs  topological_sort.rs  union_find.rs  vector.rs
