[package]
name = "aoc_2025"
version = "0.1.0"
edition = "2024"

[dependencies]
aoc_util = { path = "../util" }
itertools = "0.13.0"

[[bin]]
name = "2025_01"
path = "src/01.rs"

[[bin]]
name = "2025_02"
path = "src/02.rs"

[[bin]]
name = "2025_03"
path = "src/03.rs"

[[bin]]
name = "2025_04"
path = "src/04.rs"

[[bin]]
name = "2025_05"
path = "src/05.rs"
