[package]
name = "aoc_2025"
version = "0.1.0"
edition = "2024"

[dependencies]
aoc_util = { path = "../util" }
itertools = "0.13.0"
microlp = "0.2.11"
regex = "1.11.1"

[[bin]]
name = "2025_01"
path = "src/01.rs"

[[bin]]
name = "2025_02"
path = "src/02.rs"

[[bin]]
name = "2025_03"
path = "src/03.rs"

[[bin]]
name = "2025_04"
path = "src/04.rs"

[[bin]]
name = "2025_05"
path = "src/05.rs"

[[bin]]
name = "2025_06"
path = "src/06.rs"

[[bin]]
name = "2025_07"
path = "src/07.rs"

[[bin]]
name = "2025_08"
path = "src/08.rs"

[[bin]]
name = "2025_09"
path = "src/09.rs"

[[bin]]
name = "2025_10"
path = "src/10.rs"

[[bin]]
name = "2025_11"
path = "src/11.rs"
